Project

General

Profile

Actions

Bug #24432

closed

multisite: RGWSyncTraceNode released twice and crashed in reload

Added by Tianshan Qu almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

backtrace

#0 0x00007fea39590fcb in raise (sig=sig@entry=11) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
#1 0x00007fea3ad00971 in reraise_fatal (signum=11) at /root/ceph/src/global/signal_handler.cc:74
#2 handle_fatal_signal (signum=11) at /root/ceph/src/global/signal_handler.cc:138
#3 <signal handler called>
#4 0x00007fea3ae736af in _exchange_and_add (_val=-1, _mem=0xfffffffffffffff9) at /opt/rh/devtoolset-7/root/usr/include/c++/7/ext/atomicity.h:49
#5 __exchange_and_add_dispatch (
_val=-1, _mem=0xfffffffffffffff9) at /opt/rh/devtoolset-7/root/usr/include/c++/7/ext/atomicity.h:82
#6 std::string::_Rep::_M_dispose (this=0xffffffffffffffe9, __a=...) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/basic_string.h:3151
#7 0x00007fea3ae76cdd in _M_dispose (
_a=..., this=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:376
#8 ~basic_string (this=<optimized out>, _in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/basic_string.h:3498
#9 destroy<std::basic_string<char> > (this=<optimized out>, __p=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/ext/new_allocator.h:140
#10 priv_destroy<std::basic_string<char> > (p=<optimized out>, a=...) at /root/ceph/build/boost/include/boost/container/allocator_traits.hpp:390
#11 destroy<std::basic_string<char> > (p=<optimized out>, a=...) at /root/ceph/build/boost/include/boost/container/allocator_traits.hpp:322
#12 destroy_item (this=<optimized out>, p=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2436
#13 destroy_content (this=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2466
#14 destroy_content (this=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2454
#15 destroy (this=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2471
#16 ~circular_buffer (this=<optimized out>, __in_chrg=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:1193
#17 ~RGWSyncTraceNode (this=<optimized out>, __in_chrg=<optimized out>) at /root/ceph/src/rgw/rgw_sync_trace.h:34
#18 std::_Sp_counted_ptr<RGWSyncTraceNode*, (
_gnu_cxx::_Lock_policy)2>::_M_dispose (this=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:376
#19 0x00007fea3ac71586 in std::_Sp_counted_base<(_gnu_cxx::_Lock_policy)2>::_M_release (this=0x7fea3fb6f7e0)
at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:154
#20 0x00007fea3ac71586 in std::_Sp_counted_base<(
_gnu_cxx::_Lock_policy)2>::_M_release (this=0x7fea3ebd2970)
at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:154
#21 0x00007fea3ae76cbd in ~_shared_count (this=0x7fea3df18a18, __in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:684
#22 ~
_shared_ptr (this=0x7fea3df18a10, _in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:1123
#23 ~shared_ptr (this=0x7fea3df18a10, __in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr.h:93
#24 ~RGWSyncTraceNode (this=<optimized out>, __in_chrg=<optimized out>) at /root/ceph/src/rgw/rgw_sync_trace.h:34
#25 std::_Sp_counted_ptr<RGWSyncTraceNode*, (
_gnu_cxx::_Lock_policy)2>::_M_dispose (this=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:376
#26 0x00007fea3ae73c5a in M_release (this=0x7fea3fb6f7e0) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:154
#27 ~
_shared_count (this=<optimized out>, _in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:684
#28 ~
_shared_ptr (this=<optimized out>, __in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr_base.h:1123
#29 ~shared_ptr (this=<optimized out>, __in_chrg=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/shared_ptr.h:93
#30 destroy<std::shared_ptr<RGWSyncTraceNode> > (this=0x7fea3d520428, __p=<optimized out>) at /opt/rh/devtoolset-7/root/usr/include/c++/7/ext/new_allocator.h:140
#31 priv_destroy<std::shared_ptr<RGWSyncTraceNode> > (p=<optimized out>, a=...) at /root/ceph/build/boost/include/boost/container/allocator_traits.hpp:390
#32 destroy<std::shared_ptr<RGWSyncTraceNode> > (p=<optimized out>, a=...) at /root/ceph/build/boost/include/boost/container/allocator_traits.hpp:322
#33 destroy_item (p=<optimized out>, this=0x7fea3d520400) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2436
#34 destroy_content (this=0x7fea3d520400) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2466
#35 destroy_content (this=0x7fea3d520400) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2454
#36 destroy (this=0x7fea3d520400) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:2471
#37 ~circular_buffer (this=0x7fea3d520400, __in_chrg=<optimized out>) at /root/ceph/build/boost/include/boost/circular_buffer/base.hpp:1193
#38 RGWSyncTraceManager::~RGWSyncTraceManager (this=0x7fea3d520380, __in_chrg=<optimized out>) at /root/ceph/src/rgw/rgw_sync_trace.cc:128
#39 0x00007fea3ae73c89 in RGWSyncTraceManager::~RGWSyncTraceManager (this=0x7fea3d520380, __in_chrg=<optimized out>) at /root/ceph/src/rgw/rgw_sync_trace.cc:133
#40 0x00007fea3af49f79 in RGWRados::finalize (this=0x7fea3d3ec000) at /root/ceph/src/rgw/rgw_rados.cc:3780
#41 0x00007fea3af4a6be in RGWStoreManager::close_storage (store=0x7fea3d3ec000) at /root/ceph/src/rgw/rgw_rados.cc:14372
#42 0x00007fea3ad20696 in RGWRealmReloader::reload (this=0x7ffee3055370) at /root/ceph/src/rgw/rgw_realm_reloader.cc:90
#43 0x00007fea3ac6cf89 in Context::complete (this=0x7fea3f9eab70, r=<optimized out>) at /root/ceph/src/include/Context.h:77
#44 0x00007fea30bc004b in SafeTimer::timer_thread (this=0x7ffee3055390) at /root/ceph/src/common/Timer.cc:97
#45 0x00007fea30bc160d in SafeTimerThread::entry (this=<optimized out>) at /root/ceph/src/common/Timer.cc:30
#46 0x00007fea39589dc5 in start_thread (arg=0x7fe9d35b7700) at pthread_create.c:308
#47 0x00007fea2dad921d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #24619: mimic: multisite: RGWSyncTraceNode released twice and crashed in reloadResolvedNathan CutlerActions
Actions #2

Updated by Yehuda Sadeh almost 6 years ago

  • Status changed from New to 7
  • Priority changed from Normal to High
  • Backport set to mimic, luminous
Actions #3

Updated by Casey Bodley almost 6 years ago

  • Status changed from 7 to Pending Backport
Actions #4

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24619: mimic: multisite: RGWSyncTraceNode released twice and crashed in reload added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Backport changed from mimic, luminous to mimic

@Casey: I could not find RGWSyncTraceNode in luminous

Actions #7

Updated by Nathan Cutler almost 6 years ago

@Yehuda Sadeh: I could not find RGWSyncTraceNode in luminous, so I removed luminous from the backport field.

Actions #8

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF